// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component Should have card classname 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    Card Content
  </div>
</DocumentFragment>
`;

exports[`Card component Should have card-content classname 1`] = `
<DocumentFragment>
  <div
    class="card-content"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`Card component Should have card-footer's classname 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="card-footer"
    >
      <div
        class="card-footer-item"
      >
        Yes
      </div>
      <div
        class="card-footer-item"
      >
        No
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card component Should have card-header's classname 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="card-header"
    >
      <div
        class="card-header-title"
      >
        Title
      </div>
      <div
        class="card-header-icon"
      >
        <i
          class="icon"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card component Should have card-image classname 1`] = `
<DocumentFragment>
  <div
    class="card-image"
  >
    <figure
      class="image is-4by3"
    >
      <img
        alt=""
        class=""
        src="http://bulma.io/images/placeholders/1280x960.png"
      />
    </figure>
  </div>
</DocumentFragment>
`;
